--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link href="https://cdnjs.cloudflare.com/ajax" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Podcast za ghetto</title>
   </head>
   <body>
 
     <div id="root"></div>
-  
+    <script src="https://kit.fontawesome.com/0dbefb1282.js" crossorigin="anonymous"></script>
   </body>
 </html>
