--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/mic.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- LinkedIn Badge -->
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>Vocal Tweet</title>
+    <title>Voice Tweet</title>
   </head>
   <body>
 
