worked on the sign in and sign up page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/mic.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A voice messaging platform"/>
+    <meta name="author" content="Imran"/>
+    <meta name="keywords" content="Voice, tweet, message">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- LinkedIn Badge -->
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
