--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <!-- LinkedIn Badge -->
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <link href="https://cdnjs.cloudflare.com/ajax" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>Voice Tweet</title>
+    <title>Follow Up</title>
   </head>
   <body>
 
